[gd_scene load_steps=2 format=3 uid="uid://b2mwv4cl5sm6t"]

[ext_resource type="Script" path="res://src/ui_components/swtich_option_button/switch_option_button.gd" id="1_6xdk8"]

[node name="SwitchOptionsButton" type="MarginContainer"]
custom_minimum_size = Vector2(200, 40)
anchors_preset = -1
anchor_right = 0.141
anchor_bottom = 0.037
offset_right = -150.72
offset_bottom = 0.0400009
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0
script = ExtResource("1_6xdk8")
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="Prev" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "<"

[node name="OptionButton" type="OptionButton" parent="HBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
text_overrun_behavior = 3

[node name="Next" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = ">"

[connection signal="pressed" from="HBoxContainer/Prev" to="." method="_on_prev_pressed"]
[connection signal="item_selected" from="HBoxContainer/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="HBoxContainer/Next" to="." method="_on_next_pressed"]
